packages/kit/test/apps/basics/src/routes/load/invalidation/forced/state.js
let count = 0;

export function increment() {
	return count++;
}
